Finished auth module
